z-index fix pt. 2

--- a/src/app/components/book-carousel/book-carousel.component.css
+++ b/src/app/components/book-carousel/book-carousel.component.css
@@ -12,7 +12,7 @@
   border: none;
   background-color: #2B2D42;
   color: white;
-  z-index: 10;
+  z-index: 9;
 }
 
 .bookCarousel__button--prev {
