--- a/src/app/components/books-list/books-list.component.css
+++ b/src/app/components/books-list/books-list.component.css
@@ -29,7 +29,7 @@
   box-shadow: 10px 10px 5px 0 rgba(70, 70, 70, 0.4);
   transform: translateX(-100%);
   transition: transform 0.5s;
-  z-index: 12;
+  z-index: 10;
 }
 
 .booksFilter--opened {
