--- a/src/app/components/scroll-top/scroll-top.component.css
+++ b/src/app/components/scroll-top/scroll-top.component.css
@@ -12,7 +12,7 @@
   align-items: center;
   cursor: pointer;
   transition: opacity 0.2s;
-  z-index: 14;
+  z-index: 12;
 }
 
 
